Trying to solve css style problem center align

--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,8 @@ img {
 }
 
 .images64 {
-    display: inline-block;
     text-align: center;
-    width: 100px;
+    width: auto;
     height: 100px;
+    float: left;
 }
